# perennial-example-proof

./: .gitignore  LICENSE  Makefile  README.md  _CoqProject  example-proof.opam  example.go  example_test.go  go.mod  go.sum  goose.toml
.github/workflows/: ci.yml
etc/: install.sh  update-goose.sh
src/code/github_com/tchajed/: perennial_example_proof.v
src/generatedproof/github_com/tchajed/: perennial_example_proof.v
src/proof/github_com/tchajed/: perennial_example_proof.v
