opam-version: "2.0"
license: "MIT"
maintainer: "Tej Chajed"
authors: "Tej Chajed"
homepage: "https://github.com/tchajed/perennial-example-proof"
bug-reports: "https://github.com/tchajed/perennial-example-proof"
dev-repo: "git+https://github.com/tchajed/perennial-example-proof.git"
version: "dev"
synopsis: "A test of perennial as a dependency"

depends: [
  "perennial"
]

pin-depends: [
  ["perennial.dev"           "git+https://github.com/mit-pdos/perennial#577140b0594fbdea"]

  ## begin indirect
  ["coq-record-update.dev"   "git+https://github.com/tchajed/coq-record-update#7b2645210331c3ec"]
  ["rocq-stdpp.dev"          "git+https://gitlab.mpi-sws.org/iris/stdpp#187909f0c15b7c8"]
  ["rocq-iris.dev"           "git+https://gitlab.mpi-sws.org/iris/iris#fde0f8699242184"]
  ["iris-named-props.dev"    "git+https://github.com/tchajed/iris-named-props#c388714a93b1c043"]
  ## end
]

build: [make "-j%{jobs}%"]
install: ["./etc/install.sh"]
