opam-version: "2.0"
license: "MIT"
maintainer: "Tej Chajed"
authors: "Tej Chajed"
homepage: "https://github.com/tchajed/perennial-example-proof"
bug-reports: "https://github.com/tchajed/perennial-example-proof"
dev-repo: "git+https://github.com/tchajed/perennial-example-proof.git"
version: "dev"
synopsis: "A test of perennial as a dependency"

depends: [
  "perennial"
]

pin-depends: [
  ["perennial.dev"             "git+https://github.com/mit-pdos/perennial#34dd648e89"]

  ## begin indirect
  ["coq-record-update.dev"     "git+https://github.com/tchajed/coq-record-update#7b26452103"]
  ["rocq-stdpp.dev"            "git+https://gitlab.mpi-sws.org/iris/stdpp#a09c2a19de"]
  ["rocq-iris.dev"             "git+https://gitlab.mpi-sws.org/iris/iris#d8f049ee6e"]
  ["iris-named-props.dev"      "git+https://github.com/tchajed/iris-named-props#c388714a93"]
  ## end
]

build: [make "GOCACHE=_build/.gocache" "-j%{jobs}%"]
install: ["go" "tool" "perennial-cli" "install"]
build-env: [
  [GOCACHE = "%{build}%/_build/.gocache"]
]
